<resources>
    <string name="app_name">Speed Typing</string>
    <string name="basic_hello">hello world</string>
    <string name="start_btn">Start</string>
    <string name="pause_btn">Pause</string>
    <string name="quit_btn">Quit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="scores_btn">Scores</string>
    <string name="return_btn">Return</string>
    <string name="home_btn">Home</string>
    <string name="time">Time</string>
    <string name="timeUnit">Sec</string>
    <string name="precision">%</string>
    <string name="nbCaracterePerSec">char/Sec</string>
    <string name="nbWordWrite">words written</string>
    <string name="nbWordMissed">words missed</string>
    <string name="nbLife">Life</string>
    <string name="takeShot">Take shot</string>
    <string name="endGameTitle">End Game</string>
    <string name="endGameDesc">Results</string>
    <string name="homeTitle">Welcome to speed-typing!</string>
    <string name="homeDesc">Begin a new Game</string>
    <string name="chooseCategory">Choose category</string>

    <string name="GameIsHorizontal1">You can\'t play if the screen is horizontal</string>
    <string name="GameIsHorizontal2">Pls turn you phone</string>
    <string name="fragment_btn">fragment</string>


    <string-array name="wordsFamily">
        <item>Français</item>
        <item>English</item>
    </string-array>

    <string name="cameraUnavailable">Camera unavailable</string>
    <string name="cameraAccess">You should accept the use of the camera to take a picture</string>

    <string name="saveGameDenied">You should provide a name and a photo</string>

</resources>
