<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity"
    android:orientation="vertical"
    android:background="@drawable/bgapp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/endGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeTitle"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/endGame"
            android:text="@string/homeDesc"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:id="@+id/clement"
            android:layout_alignParentRight="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/clement"/>

        <ImageView
            android:layout_toLeftOf="@id/clement"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/jonathan"/>

    </RelativeLayout>



    <TextView
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/chooseCategory"
        android:textAlignment="center"
        android:background="@color/colorWhite"
        android:padding="10dp"
        />

    <Spinner
        android:layout_gravity="center"
        android:id="@+id/wordsSpinner"
        android:layout_width="100dp"
        android:textAlignment="center"
        android:layout_height="45dp"
        android:background="@color/colorWhite"
        android:padding="5dp"
        />


    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/startBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/start_btn"
        android:background="@color/colorWhite"
        />

    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/scoresBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/scores_btn"
        android:background="@color/colorWhite"
        />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/fragmentBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:text="@string/fragment_btn" />



</LinearLayout>